tdf#162803 editeng: Fix invalid kashida array after layout

This change updates editeng to clear the kashida array during layout, at
the same time it clears other justification data.

Previously, editeng could recycle stale kashida arrays and apply them to
lines with different lengths. This would result in stray kashida
rendered at inappropriate positions in lines, or accessing memory past
the end of the kashida array, resulting in assertions or
nondeterministic crashes.

Change-Id: I9c06239298d630f2d61b5e67a54f4c3e079c1193
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172967
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
Tested-by: Jenkins
(cherry picked from commit 6eb0523e27473fe2ebe281b2682a5045f3b39312)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173088
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>